<resources>
    <string name="app_name">DotaGuessr</string>
    <string name="skill_bracket">Skill Bracket</string>
    <string name="lobby_type">Lobby Type</string>
    <string name="region">Region</string>
    <string name="game_mode">Game Mode</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="farm">Farm</string>
    <string name="damage">Damage</string>
    <string name="items">Items</string>
    <string name="the_radiant">The Radiant</string>
    <string name="hero">Hero</string>
    <string name="k">K</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="net">NET</string>
    <string name="the_dire">The Dire</string>
    <string name="exampleMatchId">178961690</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_fire_missiles">Faield HTTP call</string>
    <string name="SteamWebAPIKey">C255CE350B0A442259DF905FCE74FFA4</string>
    <string name="RadiantWin">Radiant victory</string>
    <string name="DireWin">Dire Victory</string>
    <string name="lh">LH</string>
    <string name="dn">DN</string>
    <string name="gpm">GPM</string>
    <string name="xpm">XPM</string>
    <string name="building_status">Building status</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_picked">You picked:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="enter_id">Enter ID</string>
    <string name="username">Username:</string>
    <string name="dota_friend_id">Dota friend ID</string>
    <string name="no_connected_id">No saved ID</string>
    <string name="play">Play</string>
</resources>
