<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueGreenBackground"
        tools:context=".AnswerActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/empty_item_slot"
            android:id="@+id/answerImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/hero"/>
    <TextView
            android:text="@string/hero"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/answerTextView"
            app:layout_constraintStart_toEndOf="@+id/answerImageView"
            app:layout_constraintTop_toTopOf="@+id/answerImageView" android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/answerImageView" app:layout_constraintVertical_bias="0.76"
            android:layout_marginBottom="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/you_picked"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/are_you_sure"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_height="wrap_content" android:id="@+id/areYouSureTextView"
            app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/answerImageView" android:layout_marginTop="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/areYouSureTextView" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/areYouSureTextView" app:layout_constraintEnd_toEndOf="@+id/areYouSureTextView"
            android:id="@+id/linearLayout">
    </LinearLayout>
    <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonYes"
            app:layout_constraintTop_toBottomOf="@+id/areYouSureTextView"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_border"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:onClick="yesBtn"/>
    <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonNo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_border"
            android:layout_marginBottom="16dp" app:layout_constraintTop_toBottomOf="@+id/areYouSureTextView"
            android:layout_marginTop="16dp"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:onClick="noBtn"/>
    <TextView
            android:text=""
            android:textColor="@color/radiantGreen"
            android:textSize="50sp"
            android:textStyle="bold"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-5"
            android:shadowDy="-5"
            android:shadowRadius="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correctTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerImageView" android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons" android:layout_marginBottom="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayoutButtons"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">
        <Button
                android:text="@string/quit"
                android:background="@drawable/button_border"
                android:layout_width="wrap_content"
                android:layout_marginEnd="4dp"
                android:onClick="quitBtn"
                android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"/>
        <Button
                android:text="@string/back"
                android:background="@drawable/button_border"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_width="wrap_content"
                android:onClick="backBtn"
                android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="1"/>
        <Button
                android:text="@string/next"
                android:background="@drawable/button_border"
                android:layout_width="wrap_content"
                android:layout_marginStart="4dp"
                android:onClick="nextBtn"
                android:layout_height="wrap_content" android:id="@+id/button6" android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>