<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:background="@color/darkWhiteTransparent"
             tools:context=".OverviewTableFragment">
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/the_radiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/radiantGreen"
                    android:background="@android:color/transparent"
            />
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:id="@+id/radiantTable">

                <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView
                            android:text=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView12"/>
                    <TextView
                            android:text="@string/hero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView11"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/lh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/dn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView9"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/gpm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView8"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/xpm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                    />
                </TableRow>

            </TableLayout>
            <TextView
                    android:text="@string/the_dire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/direTeamName"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/direRed"
                    android:background="@android:color/transparent"
            />
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*" android:id="@+id/direTable">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direEmpty"/>
                    <TextView
                            android:text="@string/hero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direHero"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/lh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direK"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/dn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direD"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/gpm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direA"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:text="@string/xpm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/direNet"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                    />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>