<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/display_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueGreenBackground"
        tools:context=".DisplayGame">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blueGreenBackground"
                android:id="@+id/display_game_constraint"
                tools:context=".DisplayGame">
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/whiteTransparent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:id="@+id/cardView">
                <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp">

                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:layout_marginTop="8dp">
                        <TextView
                                android:text=""
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tvRegion"
                                android:layout_weight="1"
                                android:textStyle="bold" android:textColor="@android:color/white"
                                android:shadowColor="@color/text_shadow"
                                android:shadowDx="-1"
                                android:shadowDy="-1"
                                android:shadowRadius="1"/>
                        <TextView
                                android:text=""
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tvGameMode"
                                android:layout_weight="1"
                                android:textStyle="bold" android:textColor="@android:color/white"
                                android:shadowColor="@color/text_shadow"
                                android:shadowDx="-1"
                                android:shadowDy="-1"
                                android:shadowRadius="1"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:layout_marginBottom="8dp">
                        <TextView
                                android:text="@string/region"
                                android:layout_width="62dp"
                                android:layout_height="wrap_content" android:id="@+id/textView"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:shadowColor="@color/text_shadow"
                                android:shadowDx="-1"
                                android:shadowDy="-1"
                                android:shadowRadius="1"/>
                        <TextView
                                android:text="@string/game_mode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/textView3"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:shadowColor="@color/text_shadow"
                                android:shadowDx="-1"
                                android:shadowDy="-1"
                                android:shadowRadius="1"/>
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                    android:text=""
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-5"
                    android:shadowDy="-5"
                    android:shadowRadius="5"
                    android:layout_height="wrap_content"
                    android:id="@+id/winner" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/cardView"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:textColor="@color/radiantGreen"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiantKills"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/matchDuration"
                    app:layout_constraintTop_toTopOf="@+id/matchDuration"/>
            <TextView
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/matchDuration"
                    app:layout_constraintTop_toBottomOf="@+id/winner" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/winner" app:layout_constraintStart_toStartOf="@+id/winner"/>
            <TextView
                    android:text=""
                    android:textColor="@color/direRed"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/direKills"
                    app:layout_constraintStart_toEndOf="@+id/matchDuration" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/matchDuration"/>
            <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkWhiteTransparent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/matchDuration" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:id="@+id/tabLayout"
                    app:tabTextAppearance="@style/TableLayoutItem"
                    app:tabIndicatorColor="@android:color/transparent"
                    app:tabBackground="@drawable/tab_background"
                    app:tabPaddingStart="0dp"
                    app:tabPaddingEnd="0dp">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/farm"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tabItem"
                        android:text="@string/items"/>

<!--                <com.google.android.material.tabs.TabItem-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/damage"/>-->
            </com.google.android.material.tabs.TabLayout>
<!--            <androidx.viewpager.widget.ViewPager-->
<!--                    android:id="@+id/viewPager"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="420dp"-->
<!--                    app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/tabLayout"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/tabLayout"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/tabLayout"-->
<!--                    app:layout_constraintHorizontal_bias="1.0"-->
<!--            >-->
<!--            </androidx.viewpager.widget.ViewPager>-->
            <LinearLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/imageViewMap"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true" android:contentDescription="@string/building_status"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>